--- a/style.css
+++ b/style.css
@@ -315,8 +315,7 @@ iframe {
     background: var(--select-color2);
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    padding-top: 100px;
-    margin-top: 100px;
+    margin: 350px 0 80px;
 }
 
 .inquiry {
@@ -343,7 +342,7 @@ footer {
     grid-column-start: 2;
     max-width: 80vw;
     background-color: var(--select-color1);
-    height: 150px;
+    height: 100px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     align-content: center;
